--- a/package.json
+++ b/package.json
@@ -11,25 +11,31 @@
   "dependencies": {
     "@headlessui/react": "^2.1.2",
     "@heroicons/react": "^1.0.6",
-    "@nextui-org/calendar": "^2.0.11",
+    "@nextui-org/calendar": "^2.0.4",
     "@nextui-org/system": "^2.2.5",
-    "@nextui-org/theme": "^2.2.9",
-    "chart.js": "^4.4.3",
+    "@nextui-org/theme": "^2.1.18",
+    "chart.js": "^4.4.4",
     "date-fns": "^3.6.0",
+    "fast-glob": "^3.3.2",
     "framer-motion": "^11.3.28",
+    "micromatch": "^4.0.7",
     "moment": "^2.30.1",
-    "next": "14.2.5",
+    "next": "^14.2.6",
     "react": "^18",
     "react-big-calendar": "^1.13.2",
+    "react-calendar": "^5.0.0",
     "react-chartjs-2": "^5.2.0",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-icons": "^5.3.0",
+    "react-table": "^7.8.0"
   },
   "devDependencies": {
     "@types/node": "22.4.0",
     "@types/react": "18.3.3",
     "eslint": "^8",
-    "eslint-config-next": "14.2.5",
+    "eslint-config-next": "^0.2.4",
     "postcss": "^8",
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^3.4.10",
+    "typescript": "5.5.4"
   }
 }
