--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,7 +27,7 @@
     ".next/types/**/*.ts",
     "**/*.ts",
     "**/*.tsx"
-  ],
+, "src/app/ERP/Components/SideBar/SideBar.Tsx", "src/app/ERP/Components/SideBar/SideBar.Tsx"  ],
   "exclude": [
     "node_modules"
   ]
