--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@nextui-org/calendar": "^2.0.4",
     "@nextui-org/system": "^2.2.5",
     "@nextui-org/theme": "^2.1.18",
+    "bootstrap": "^5.3.3",
     "chart.js": "^4.4.4",
     "date-fns": "^3.6.0",
     "fast-glob": "^3.3.2",
@@ -22,16 +23,19 @@
     "moment": "^2.30.1",
     "next": "^14.2.6",
     "react": "^18",
-    "react-big-calendar": "^1.13.2",
+    "react-big-calendar": "^1.13.4",
+    "react-bootstrap": "^2.10.4",
     "react-calendar": "^5.0.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
+    "react-modal": "^3.16.1",
     "react-table": "^7.8.0"
   },
   "devDependencies": {
     "@types/node": "22.4.0",
     "@types/react": "18.3.3",
+    "@types/react-big-calendar": "^1.8.10",
     "eslint": "^8",
     "eslint-config-next": "^0.2.4",
     "postcss": "^8",
