--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@nextui-org/calendar": "^2.0.4",
     "@nextui-org/system": "^2.2.5",
     "@nextui-org/theme": "^2.1.18",
+    "@shadcn/ui": "^0.0.4",
     "bootstrap": "^5.3.3",
+    "bootstrap-datepicker": "^1.10.0",
     "chart.js": "^4.4.4",
     "date-fns": "^3.6.0",
     "fast-glob": "^3.3.2",
@@ -22,11 +24,13 @@
     "micromatch": "^4.0.7",
     "moment": "^2.30.1",
     "next": "^14.2.9",
+    "punycode": "^2.3.1",
     "react": "^18",
     "react-big-calendar": "^1.13.4",
     "react-bootstrap": "^2.10.4",
     "react-calendar": "^5.0.0",
     "react-chartjs-2": "^5.2.0",
+    "react-datepicker": "^7.4.0",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
     "react-modal": "^3.16.1",
