--- a/DGSBackEnd/pom.xml
+++ b/DGSBackEnd/pom.xml
@@ -30,32 +30,53 @@
         <java.version>17</java.version>
     </properties>
     <dependencies>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-data-jpa</artifactId>
-        </dependency>
+        <!-- Dependência do Spring Boot Starter Web (para criar APIs RESTful) -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
-
+    
+        <!-- Dependência do Spring Boot Starter Data JPA (para usar JPA com Spring Data) -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
+        </dependency>
+    
+        <!-- Dependência do PostgreSQL JDBC Driver -->
         <dependency>
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
             <scope>runtime</scope>
         </dependency>
+
+        <dependency>
+            <groupId>javax.persistence</groupId>        
+            <artifactId>javax.persistence-api</artifactId>        
+            <version>2.2</version>        
+        </dependency>
+    
+        <!-- Dependência do Spring Boot Starter Validation (para validação dos DTOs) -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
+        </dependency>
+    
+        <!-- Dependência do Spring Boot Starter Security (caso queira autenticação e segurança) -->
+        <!-- ...existing code... -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
+        <!-- ...existing code... -->
+    
+        <!-- Dependência do Spring Boot Starter Test (para testes unitários) -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
-
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-validation</artifactId>
-        </dependency>
-
     </dependencies>
+    
 
     <build>
         <plugins>
