--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@nextui-org/theme": "^2.1.18",
+    "axios": "^1.7.7",
     "chart.js": "^4.4.4",
     "moment": "^2.30.1",
     "next": "^14.2.9",
