--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "devDependencies": {
     "@types/node": "22.9.0",
+    "@types/react-big-calendar": "^1.16.0",
     "eslint-config-next": "^0.2.4",
     "typescript": "5.6.3"
   }
