--- a/DGSBackEnd/src/main/resources/application.properties
+++ b/DGSBackEnd/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=DGC
 spring.datasource.url=jdbc:postgresql://localhost:5432/DGC
 spring.datasource.username=postgres
-spring.datasource.password=BMS2303
+spring.datasource.password=admin
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
