--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
-    "react-table": "^7.8.0"
+    "react-table": "^7.8.0",
+    "studio-skin-care": "file:"
   },
   "devDependencies": {
     "@types/node": "22.9.0",
